apps/oxlint/src/snapshots/_fixtures__cli__linter__js_as_jsx.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: fixtures/cli/linter/js_as_jsx.js
working directory: 
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[fixtures/cli/linter/js_as_jsx.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | <div /> // Should `.js` file pass as `.jsx`.
   `----
  help: Remove the debugger statement

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 97 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
